--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -5,7 +5,11 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-		<!-- Your code goes here-->
+		<!-- Your code goes heresy-->
+
+	<p>Make sure that you have<a href="../../../Prerequisites.html"> prerequisites</a> installed to run experiment</p>
+	<p>You can run the simulator as an applet in the browser or as an application using the command 'java -jar ArmSimulator.jar'. You can download the simulator <a href="ArmSimulator.jar">here</a>.</p>
+							
 
 	<!-- Add JS at the bottom of HTML file --> 
         <script src="./js/main.js"></script>
