added prerequisites link

--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -7,7 +7,7 @@
 <body>
 		<!-- Your code goes heresy-->
 
-	<p>Make sure that you have<a href="../../../Prerequisites.html"> prerequisites</a> installed to run experiment</p>
+	<p>Make sure that you have<a href="../../../Introduction.html"> prerequisites</a> installed to run experiment</p>
 	<p>You can run the simulator as an applet in the browser or as an application using the command 'java -jar ArmSimulator.jar'. You can download the simulator <a href="ArmSimulator.jar">here</a>.</p>
 							
 
