--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 		<!-- Your code goes heresy-->
-
-	<p>Make sure that you have<a href="../../../Introduction.html" target="_PARENT"> prerequisites</a> installed to run experiment</p>
+	<p><li>This simulation has some <a href="../../../Introduction.html" target="PARENT">software dependencies</a>. We highly recommend you to use our customized <a href="https://vlead.vlabs.ac.in/development/#virtual-box" target="blank">VirtualBox</a> for the smooth running of these simulations.</li></p>
+	<!--<p>Make sure that you have<a href="../../../Introduction.html" target="_PARENT"> prerequisites</a> installed to run experiment</p>-->
 	<p>You can run the simulator as an applet in the browser or as an application using the command 'java -jar ArmSimulator.jar'. You can download the simulator <a href="ArmSimulator.jar">here</a>.</p>
 							
 
